@@ -310,8 +310,11 @@ the function `comint-truncate-buffer' is on `comint-output-filter-functions'."
   :group 'comint)
 
 ;; FIXME: this should be defcustom
-(defvar comint-input-ring-size 150
-  "Size of input history ring.")
+(defcustom comint-input-ring-size 500
+  "Size of the input history ring in `comint-mode'."
+  :type 'integer
+  :group 'comint
+  :version "23.2")
 
 (defvar comint-input-ring-separator "\n"
   "Separator between commands in the history file.")
