@@ -1,3 +1,8 @@
+2010-01-01  Juri Linkov  <juri@jurta.org>
+
+	* comint.el (comint-input-ring-size): Make it a defcustom and
+	increase the default to 500.
+
 2009-12-31  Nick Roberts  <nickrob@snap.net.nz>
 
 	Further changes from EMACS_23_1_RC branch (2009-12-29 contd).
